fix(JobCard): Make branded ad banner full width on mobile (#396)

--- a/react/JobCard/JobCard.less
+++ b/react/JobCard/JobCard.less
@@ -14,6 +14,10 @@
   padding-bottom: @grid-base;
 }
 
+.alignCenter {
+  text-align: center;
+}
+
 .section {
   padding-bottom: @job-card-section-bottom-space;
 }
@@ -190,20 +194,6 @@
     max-height: @grid-base * 15;
     padding-bottom: @grid-base *2;
   }
-}
-
-.companyBanner {
-  display: inline;
-  max-height: @max-banner-height;
-}
-
-.companyBannerOnDesktop {
-  padding-bottom: @banner-bottom-padding;
-}
-
-.companyBannerOnMobile {
-  max-width: 100%;
-  padding-bottom: @grid-row-height * 3;
 }
 
 .bookmarkButton {
